--- a/production/longhorn-system/longhorn/values.yaml
+++ b/production/longhorn-system/longhorn/values.yaml
@@ -1,5 +1,4 @@
 
 defaultSettings:
   defaultReplicaCount: 3
-  backupTarget: "cifs://192.168.0.30/Longhorn-Prod"
-  backupTargetCredentialSecret: "cifs-secret"
+  backupTarget: "nfs://storage.internal.untouchedwagons.com:/mnt/tank/Longhorn/Production"
