--- a/production/servarr/bazarr/service.yaml
+++ b/production/servarr/bazarr/service.yaml
@@ -79,11 +79,11 @@ spec:
         - name: backups
           nfs:
             server: 192.168.0.30
-            path: /tank/Media/Backups
+            path: /mnt/tank/Media/Backups
         - name: videos
           nfs:
             server: 192.168.0.30
-            path: /tank/Media/Videos
+            path: /mnt/tank/Media/Videos
 ---
 apiVersion: v1
 kind: Service
