--- a/production/servarr/sonarr/service.yaml
+++ b/production/servarr/sonarr/service.yaml
@@ -88,15 +88,15 @@ spec:
         - name: videos
           nfs:
             server: 192.168.0.30
-            path: /tank/Media/Videos
+            path: /mnt/tank/Media/Videos
         - name: torrents
           nfs:
             server: 192.168.0.30
-            path: /tank/Media/Torrents
+            path: /mnt/tank/Media/Torrents
         - name: usenet
           nfs:
             server: 192.168.0.30
-            path: /tank/Media/Usenet
+            path: /mnt/tank/Media/Usenet
         - name: tmp
           emptyDir:
             medium: Memory
