Added Technitium related stuff

--- a/production/default/homepage/service.yaml
+++ b/production/default/homepage/service.yaml
@@ -283,6 +283,9 @@ data:
             - Netboot.XYZ:
                 icon: netboot.png
                 href: http://netboot.internal.untouchedwagons.com
+            - Technitium:
+                icon: technitium.png
+                href: http://technitium.internal.untouchedwagons.com/
 
         - Services:
             - Vaultwarden:
