--- a/production/longhorn-system/longhorn/ingress.yaml
+++ b/production/longhorn-system/longhorn/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
     traefik.ingress.kubernetes.io/redirect-entry-point: https
 spec:
   rules:
-  - host: longhorn.services.internal.untouchedwagons.com
+  - host: longhorn.services.untouchedwagons.com
     http:
       paths:
       - backend:
@@ -23,4 +23,4 @@ spec:
   tls:
     - hosts: 
       - untouchedwagons.com
-      secretName: com-untouchedwagons-internal-services
+      secretName: com-untouchedwagons-services
