--- a/production/servarr/radarr/service.yaml
+++ b/production/servarr/radarr/service.yaml
@@ -123,7 +123,7 @@ metadata:
     traefik.ingress.kubernetes.io/redirect-entry-point: https
 spec:
   rules:
-  - host: radarr.services.internal.untouchedwagons.com
+  - host: radarr.services.untouchedwagons.com
     http:
       paths:
       - backend:
@@ -136,4 +136,4 @@ spec:
   tls:
     - hosts: 
       - untouchedwagons.com
-      secretName: com-untouchedwagons-internal-services
+      secretName: com-untouchedwagons-services
