--- a/production/traefik/values.yaml
+++ b/production/traefik/values.yaml
@@ -26,12 +26,12 @@ ingressRoute:
   dashboard:
     annotations:
       kubernetes.io/ingress.class: traefik-external
-    matchRule: Host(`traefik.services.internal.untouchedwagons.com`)
+    matchRule: Host(`traefik.services.untouchedwagons.com`)
     entryPoints: 
       - traefik
       - websecure
     tls:
-      secretName: com-untouchedwagons-internal-services
+      secretName: com-untouchedwagons-services
 
 providers:
   kubernetesCRD:
