--- a/inventory/prod-cluster/hosts.ini
+++ b/inventory/prod-cluster/hosts.ini
@@ -1,5 +1,7 @@
 [master]
 k3s-prod-node-01.internal.untouchedwagons.com
+k3s-prod-node-02.internal.untouchedwagons.com
+k3s-prod-node-03.internal.untouchedwagons.com
 
 [node]
 
