Reintroduced backup services for *arr apps

--- a/production/servarr/bazarr/service.yaml
+++ b/production/servarr/bazarr/service.yaml
@@ -72,6 +72,29 @@ spec:
               name: bazarr-config
             - mountPath: /mnt/data/Videos
               name: videos
+        - name: backup
+          image: untouchedwagons/simple-backup:1.0.5
+          resources:
+            limits:
+              memory: 256Mi
+              cpu: "1"
+            requests:
+              memory: 128Mi
+              cpu: "0.2"
+          volumeMounts:
+            - mountPath: /data
+              name: bazarr-config
+            - mountPath: /backups
+              name: backups
+          env:
+            - name: BACKUP_APPEND_DIRECTORY
+              value: "/kubernetes/production/bazarr"
+            - name: BACKUP_BASE_NAME
+              value: "bazarr"
+            - name: BACKUP_RETENTION
+              value: "24"
+            - name: BACKUP_FREQUENCY
+              value: "0 0 * * *"
       volumes:
         - name: bazarr-config
           persistentVolumeClaim:
