--- a/production/servarr/prowlarr/service.yaml
+++ b/production/servarr/prowlarr/service.yaml
@@ -72,10 +72,37 @@ spec:
           volumeMounts:
           - mountPath: /config
             name: prowlarr-config
+        - name: backup
+          image: untouchedwagons/simple-backup:1.0.5
+          resources:
+            limits:
+              memory: 256Mi
+              cpu: "1"
+            requests:
+              memory: 128Mi
+              cpu: "0.2"
+          volumeMounts:
+            - mountPath: /data
+              name: prowlarr-config
+            - mountPath: /backups
+              name: backups
+          env:
+            - name: BACKUP_APPEND_DIRECTORY
+              value: "/kubernetes/production/prowlarr"
+            - name: BACKUP_BASE_NAME
+              value: "prowlarr"
+            - name: BACKUP_RETENTION
+              value: "24"
+            - name: BACKUP_FREQUENCY
+              value: "0 0 * * *"
       volumes:
         - name: prowlarr-config
           persistentVolumeClaim:
             claimName: prowlarr-config
+        - name: backups
+          nfs:
+            server: 192.168.0.30
+            path: /mnt/tank/Media/Backups
 ---
 apiVersion: v1
 kind: Service
