--- a/production/servarr/radarr/service.yaml
+++ b/production/servarr/radarr/service.yaml
@@ -78,6 +78,29 @@ spec:
               name: torrents
             - mountPath: /mnt/data/Usenet
               name: usenet
+        - name: backup
+          image: untouchedwagons/simple-backup:1.0.5
+          resources:
+            limits:
+              memory: 256Mi
+              cpu: "1"
+            requests:
+              memory: 128Mi
+              cpu: "0.2"
+          volumeMounts:
+            - mountPath: /data
+              name: radarr-config
+            - mountPath: /backups
+              name: backups
+          env:
+            - name: BACKUP_APPEND_DIRECTORY
+              value: "/kubernetes/production/radarr"
+            - name: BACKUP_BASE_NAME
+              value: "radarr"
+            - name: BACKUP_RETENTION
+              value: "24"
+            - name: BACKUP_FREQUENCY
+              value: "0 0 * * *"
       volumes:
         - name: radarr-config
           persistentVolumeClaim:
