--- a/production/servarr/sonarr/service.yaml
+++ b/production/servarr/sonarr/service.yaml
@@ -80,6 +80,29 @@ spec:
               name: usenet
             - mountPath: /tmp
               name: tmp
+        - name: backup
+          image: untouchedwagons/simple-backup:1.0.5
+          resources:
+            limits:
+              memory: 256Mi
+              cpu: "1"
+            requests:
+              memory: 128Mi
+              cpu: "0.2"
+          volumeMounts:
+            - mountPath: /data
+              name: sonarr-config
+            - mountPath: /backups
+              name: backups
+          env:
+            - name: BACKUP_APPEND_DIRECTORY
+              value: "/kubernetes/production/sonarr"
+            - name: BACKUP_BASE_NAME
+              value: "sonarr"
+            - name: BACKUP_RETENTION
+              value: "24"
+            - name: BACKUP_FREQUENCY
+              value: "0 0 * * *"
 
       volumes:
         - name: sonarr-config
@@ -97,6 +120,10 @@ spec:
           nfs:
             server: 192.168.0.30
             path: /mnt/tank/Media/Usenet
+        - name: backups
+          nfs:
+            server: 192.168.0.30
+            path: /mnt/tank/Media/Backups
         - name: tmp
           emptyDir:
             medium: Memory
