--- a/production/servarr/tdarr/service.yaml
+++ b/production/servarr/tdarr/service.yaml
@@ -46,6 +46,19 @@ spec:
     spec:
       securityContext:
         fsGroup: 1000
+      initContainers:
+        - name: restore
+          image: untouchedwagons/simple-restore:1.0.4
+          volumeMounts:
+            - mountPath: /data
+              name: tdarr-config
+            - mountPath: /backups
+              name: backups
+          env:
+            - name: BACKUP_APPEND_DIRECTORY
+              value: "/kubernetes/production/tdarr"
+            - name: BACKUP_BASE_NAME
+              value: "tdarr"
       containers:
         - name: tdarr
           image: ghcr.io/haveagitgat/tdarr:2.17.01
@@ -112,15 +125,15 @@ spec:
             claimName: tdarr-config
         - name: videos
           nfs:
-            server: 192.168.0.30
+            server: 192.168.35.30
             path: /mnt/tank/Media/Videos
         - name: tmp
           nfs:
-            server: 192.168.0.30
+            server: 192.168.35.30
             path: /mnt/tank/Scratch
         - name: backups
           nfs:
-            server: 192.168.0.30
+            server: 192.168.35.30
             path: /mnt/tank/Media/Backups
 ---
 kind: DaemonSet
@@ -193,11 +206,11 @@ spec:
             name: tdarr-sample-config
         - name: videos
           nfs:
-            server: 192.168.0.30
+            server: 192.168.35.30
             path: /mnt/tank/Media/Videos
         - name: tmp
           nfs:
-            server: 192.168.0.30
+            server: 192.168.35.30
             path: /mnt/tank/Scratch
 ---
 apiVersion: v1
