--- a/production/servarr/tdarr/service.yaml
+++ b/production/servarr/tdarr/service.yaml
@@ -174,6 +174,11 @@ spec:
       containers:
         - name: tdarr-node
           image: ghcr.io/haveagitgat/tdarr_node:2.17.01
+          resources:
+            requests:
+              gpu.intel.com/i915: "1"
+            limits:
+              gpu.intel.com/i915: "1"
           env:
             - name: serverIP
               value: "tdarr.servarr.svc.cluster.local"
