Updated FQDNs and IP addresses

--- a/production/monitoring/exporter-linux/service.yaml
+++ b/production/monitoring/exporter-linux/service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: exporter-linux
   namespace: monitoring
 spec:
+  scrapeTimeout: 30s
   relabelings:
     - action: replace
       sourceLabels: [__address__]
@@ -14,5 +15,7 @@ spec:
     - targets:
       - nut.internal.untouchedwagons.com:9100
       - vault.internal.untouchedwagons.com:9100
-      - pve-node-01.internal.untouchedwagons.com:9100
+      - pve-cluster-node-01.internal.untouchedwagons.com:9100
+      - pve-cluster-node-02.internal.untouchedwagons.com:9100
+      - pve-cluster-node-03.internal.untouchedwagons.com:9100
       - technitium.internal.untouchedwagons.com:9100
