--- a/production/monitoring/exporter-technitium/service.yaml
+++ b/production/monitoring/exporter-technitium/service.yaml
@@ -26,7 +26,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: TECHNITIUM_ADDRESS
-              value: "http://technitium.internal.untouchedwagons.com"
+              value: "http://192.168.35.5"
             - name: TECHNITIUM_PORT
               value: "80"
             - name: TECHNITIUM_USER
