--- a/production/monitoring/exporter-zfs/service.yaml
+++ b/production/monitoring/exporter-zfs/service.yaml
@@ -12,7 +12,9 @@ spec:
       targetLabel: instance
   staticConfigs:
     - targets:
-      - pve-node-01.internal.untouchedwagons.com:9134
+      - pve-cluster-node-01.internal.untouchedwagons.com:9134
+      - pve-cluster-node-02.internal.untouchedwagons.com:9134
+      - pve-cluster-node-03.internal.untouchedwagons.com:9134
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
