Added node selector for jellyfin

--- a/production/default/jellyfin/service.yaml
+++ b/production/default/jellyfin/service.yaml
@@ -20,6 +20,8 @@ spec:
       labels:
         app: jellyfin
     spec:
+      nodeSelector:
+        intel.feature.node.kubernetes.io/gpu: "true"
       initContainers:
         - name: jellyfin-restore
           image: untouchedwagons/simple-restore:1.0.4
