Added ZFS target

--- a/production/monitoring/exporter-zfs/service.yaml
+++ b/production/monitoring/exporter-zfs/service.yaml
@@ -15,6 +15,7 @@ spec:
       - pve-cluster-node-01.internal.untouchedwagons.com:9134
       - pve-cluster-node-02.internal.untouchedwagons.com:9134
       - pve-cluster-node-03.internal.untouchedwagons.com:9134
+      - vault.internal.untouchedwagons.com:9134
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
